# Templar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Templar.pro  binarytracereader.cpp  binarytracereader.h  builder.cpp  builder.h  codeeditor.cpp  codeeditor.h  colorpreferencesdialog.cpp  colorpreferencesdialog.ui  common.cpp  common.h  debugmanager.cpp  debugmanager.h  editorhandler.cpp  editorhandler.h  entryfiltersettings.cpp  entryfiltersettings.h  entryfiltersettings.ui  entryinfo.cpp  entryinfo.h  entryinfohandler.cpp  entryinfohandler.h  entryvectorbuilder.cpp  entryvectorbuilder.h  graphhandler.cpp  graphhandler.h  graphvizbuilder.cpp  graphvizbuilder.h  highlighter.cpp  highlighter.h  listwidgethandler.cpp  listwidgethandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+33 more)
gui/: codeeditor.cpp  colorpreferencesdialog.cpp  colorpreferencesdialog.h  debugmanager.cpp  debugmanager.h  entryfiltersettings.cpp  entryinfo.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qgraph.cpp  qgraph.h  sourceviewer.cpp  sourceviewer.h  sourceviewer.ui  stringlistdialog.cpp  stringlistdialog.h
helper/: breakstring.cpp  breakstring.hpp
templateeventhandlers/: editorhandler.cpp  entryinfohandler.cpp  entryinfohandler.h  graphhandler.cpp  graphhandler.h  graphvizvisitor.cpp  graphvizvisitor.h  listwidgethandler.cpp  listwidgethandler.h  traceentrylist.cpp  traceentrylist.h
tracereaders/: binarytracereader.cpp  oldxmltracereader.cpp  oldxmltracereader.h  protobuftracereader.cpp  protobuftracereader.h  sourcefileidaccumulator.h  tracereader.cpp  tracereader.h  yamltracereader.cpp  yamltracereader.h
